--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,50 @@ repositories {
     mavenCentral()
 }
 
+sourceSets {
+    main {
+        java {
+            srcDirs = ['src/main/java']
+        }
+    }
+
+    test {
+        java {
+            srcDirs = ['src/test/java']
+        }
+    }
+}
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     // https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+}
+
+jar {
+    manifest {
+        attributes 'Implementation-Version': '1.0'
+    }
+}
+
+task buildPeer(type: Jar) {
+    archiveName = "Peer"
+    manifest {
+        attributes 'Implementation-Version': '1.0'
+        attributes 'Main-Class': 'tw.imyz.p2p.Peer'
+    }
+    from sourceSets.main.output
+    configurations { all*.exclude module: 'junit' }
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+}
+
+task buildServer(type: Jar) {
+    archiveName = "Server"
+    manifest {
+        attributes 'Implementation-Version': '1.0'
+        attributes 'Main-Class': 'tw.imyz.p2p.Server'
+    }
+    from sourceSets.main.output
+    configurations { all*.exclude module: 'junit' }
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
 }
