--- a/build.gradle
+++ b/build.gradle
@@ -28,12 +28,6 @@ dependencies {
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 }
 
-jar {
-    manifest {
-        attributes 'Implementation-Version': '1.0'
-    }
-}
-
 task buildPeer(type: Jar) {
     description = "build Peer.jar"
     group = "Build"
@@ -64,3 +58,4 @@ task buildServer(type: Jar) {
     destinationDir = file("$rootDir/build/jar")
 }
 
+build.finalizedBy([buildPeer, buildServer])
